# cfdtool

./: .gitignore  Makefile  pyproject.toml
.github/workflows/: lint.yml
cfdtool/: main.py  server.py  simulation.py
cfdtool/classes/: mesh.py  shapes.py  store.py
cfdtool/simulation/: circle_simulation.py
cfdtool/utils/: classes.py  constants.py  functions.py  schemas.py
