[tool.poetry]
name = "cfdtool"
version = "0.1.0"
description = ""
authors = [
    "Mykyta Prokaiev <mykytaprokaiev@gmail.com>",
    "Farouk Haidar <fufu@gmail.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.3.0"
tqdm = "^4.66.1"
jax = "^0.4.14"
jaxlib = "^0.4.14"
mypy = "^1.5.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
ruff = "^0.0.287"
mypy = "^1.5.1"

[tool.ruff]
# Decrease the maximum line length to 79 characters.
line-length = 79

[tool.mypy]
ignore_missing_imports = true
disable_error_code = [
    "attr-defined",
    "index",
    "operator",
    "valid-type",
    "arg-type",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
